Bug 109742 - vdpau state tracker on nv92 started to hit assert after vl compute work
Summary: vdpau state tracker on nv92 started to hit assert after vl compute work
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/nouveau (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Nouveau Project
QA Contact: Nouveau Project
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-22 09:35 UTC by Andrew Randrianasulu
Modified: 2019-02-22 14:44 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
hack patch to disable compute reporting in nv50 (959 bytes, patch)
2019-02-22 09:35 UTC, Andrew Randrianasulu
Details | Splinter Review

Description Andrew Randrianasulu 2019-02-22 09:35:21 UTC
Created attachment 143438 [details] [review]
hack patch to disable compute reporting in nv50

Hello. 

I tried to update my mesa install and hit one bug.

mplayer /dev/shm/tmp/output.mkv
MPlayer SVN-r38122-5.5.0 (C) 2000-2019 MPlayer Team
224 audio & 464 video codecs

Playing /dev/shm/tmp/output.mkv.
libavformat version 58.26.101 (internal)
libavformat file format detected.
[lavf] stream 0: video (vp8), -vid 0
[lavf] stream 1: audio (vorbis), -aid 0, -alang rus
VIDEO:  [VP80]  1280x720  0bpp  30.000 fps    0.0 kbps ( 0.0 kbyte/s)
==========================================================================
Opening video decoder: [ffmpeg] FFmpeg's libavcodec codec family
libavcodec version 58.47.100 (internal)
Selected video codec: [ffvp8] vfm: ffmpeg (FFmpeg VP8)
==========================================================================
Clip info:
 ENCODER: Lavf58.20.100
Load subtitles in /dev/shm/tmp/
==========================================================================
Forced audio codec: mad
Opening audio decoder: [ffmpeg] FFmpeg/libavcodec audio decoders
AUDIO: 44100 Hz, 2 ch, floatle, 0.0 kbit/0.00% (ratio: 0->352800)
Selected audio codec: [ffvorbis] afm: ffmpeg (FFmpeg Vorbis)
==========================================================================
AL lib: (EE) UpdateDeviceParams: Failed to set 44100hz, got 48000hz instead
AO: [openal] 48000Hz 2ch s16le (2 bytes per sample)
Starting playback...
Movie-Aspect is undefined - no prescaling applied.
VO: [vdpau] 1280x720 => 1280x720 Planar YV12
mplayer: nv50/nv50_state.c:659: nv50_bind_sampler_states: Assertion `!"unexpected shader type"' failed.


MPlayer interrupted by signal 6 in module: decode video
- MPlayer crashed. This shouldn't happen.
  It can be a bug in the MPlayer code _or_ in your drivers _or_ in your
  gcc version. If you think it's MPlayer's fault, please read
  DOCS/HTML/en/bugreports.html and follow the instructions there. We can't and
  won't help unless you provide this information when reporting a possible bug.
AL lib: (EE) alc_cleanup: 1 device not closed


MPlayer interrupted by signal 11 in module: decode video

mesa version Mesa 19.1.0-devel (git-55e00a2ea8) was good.

disabling PIPE_CAP_COMPUTE for nv50 'fixes' bug for me.

Note, I hope internal use of compute shaders still unaffected, or may be I read https://cgit.freedesktop.org/mesa/mesa/commit/src/gallium/drivers/nouveau/nv50/nv50_screen.c?id=ff72440b40211326eda118232fabd53965410afd wrongly?
Comment 1 Ilia Mirkin 2019-02-22 14:44:53 UTC
I've pushed out

commit ae2cb7280436ab3fe24afef510d30201e54b795c (origin/master, origin/HEAD)
Author: Ilia Mirkin <imirkin@alum.mit.edu>
Date:   Fri Feb 22 09:40:37 2019 -0500

    nv50: disable compute
    
    It causes more trouble than it's worth. Now vl tries to create compute
    shaders without all the proper checking. Since there's really no
    (current) way to use compute on nv50, just mark it disabled.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=109742
    Fixes: f6ac0b5d71 ("gallium/auxiliary/vl: Add compute shader to support video compositor render")
    Signed-off-by: Ilia Mirkin <imirkin@alum.mit.edu>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.